'remove display override that prevent content from being hidden when collapsed'
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/trunk@87098 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/wdkCustomization/css/client.css
+++ b/Site/webapp/wdkCustomization/css/client.css
@@ -375,7 +375,6 @@
 #SNPsAlignment .wdk-CollapsibleSectionContent,
 #snps_alignment_form .wdk-CollapsibleSectionContent {
   border: 1px solid rgba(0, 0, 0, 0.12);
-  display: inline-block;
   margin: 1rem;
 }
 
